[fix] fix about me font size and section gaps

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -42,8 +42,8 @@ body {
 
   main {
     max-width: 1280px;
-    min-width: 320px;
     width: 100%;
+    min-width: 320px;
 
     section {
       .sub_heading {
@@ -58,8 +58,9 @@ body {
       background-size: 100%;
       background-repeat: no-repeat;
       background-position: center;
-      height: 100vh;
+      height: 773px;
       position: relative;
+      margin-bottom:8rem;
 
       nav.navbar {
         display: flex;
@@ -79,7 +80,8 @@ body {
       }
       img.title {
         top: 50%;
-        left: 15%;
+        left: 50%;
+        transform: translateX(-50%);
         content: url("../imgs/img_title_mobile.png");
       }
 
@@ -105,30 +107,30 @@ body {
 
     section.about {
       width: 100%;
-      // height: 100vh;
       padding-inline: 1rem;
       padding-block: 3rem;
       background-color: $BGColor;
-      // border: none;
 
       div.about_me {
         width: 100%;
         min-height: 50vh;
         @extend .flex-col-center;
         gap: 2rem;
+        padding-bottom: 15rem;
 
         div {
           @extend .flex-col-center;
           gap: 0.7rem;
 
           span.text {
-            font-size: 35px;
+            font-size: 8vw;
             font-style: italic;
             font-weight: 900;
             letter-spacing: -2px;
+            white-space: nowrap;
           }
           .text1 {
-            font-size: 38px !important;
+            // font-size: 38px !important;
             color: $fontColor;
           }
           .text2 {
@@ -143,7 +145,8 @@ body {
           @extend .flex-col-center;
 
           span {
-            font-size: 60px;
+            // font-size: 60px;
+            font-size: 13vw;
             font-weight: 900;
             font-style: italic;
             color: $fontColor;
@@ -167,6 +170,7 @@ body {
 
         img.title {
           left: 7%;
+          transform: none;
           content: url("../imgs/img_title_ipad.png");
         }
         img.logo {
@@ -177,6 +181,18 @@ body {
 
       section.about {
         padding-inline: 5rem;
+
+        div.about_me {
+          padding-bottom: 12rem;
+          .text {
+            font-size: 55px !important;
+          }
+        }
+        div.what_i_do {
+          .text {
+            font-size: 80px !important;
+          }
+        }
       }
     }
   }
@@ -188,9 +204,6 @@ body {
       section.home {
         background-image: url(../imgs/bg_main_desktop.png);
 
-        nav.navbar {
-        }
-
         img.title {
           top: 43%;
           content: url("../imgs/img_title_desktop.png");
@@ -198,6 +211,16 @@ body {
         img.logo {
           right: 8%;
           content: url("../imgs/logo_white_desktop.png");
+        }
+      }
+
+      section.about {
+        padding-bottom: 18rem;
+
+        div.about_me {
+          .text {
+            font-size: 80px !important;
+          }
         }
       }
     }
